@@ -1,5 +1,6 @@
 Changelog
 
+# get correct avatars using EasySocials queries
 # wrong query for easysocial avatars
 + added a checkbox custom field
 + added support for avatars from Easysocial
